--- a/css/style.css
+++ b/css/style.css
@@ -1089,6 +1089,9 @@ button {
   }
 
   .cart{
+    display:flex;
+    justify-content:space-between;
+    flex-direction:column;
     position:fixed;
     width:300px;
     height: 100vh;
@@ -1099,6 +1102,16 @@ button {
     background-color: white;
     box-shadow: -5px 10px 10px 2px rgba(0,0,0,0.04);
     transition: .5s ease-in-out;
+  }
+
+  .cart ul{
+    display:flex;
+    justify-content: space-between;
+  }
+  .cart ul:last-child{
+    font-weight:bold;
+    border-top: 1px solid #e6e6e6;
+    padding-top: 20px;
   }
   .cart.open{
     right: 0;
@@ -1150,7 +1163,7 @@ button {
     border:none;
     width:100%;
   }
-
+  
   .header__nav{
     display:flex;
     align-items: center;
@@ -1183,5 +1196,56 @@ button {
     display: none;
     justify-content: center;
     align-items: center;
-    
+  }
+
+  .page__hero {
+    padding: clamp(20px, 6vw, 40px) 0;
+    text-align:center;
+    background-color: #e3163c;
+    color: #fff;
+    border-top: 4px solid #f09400;
+  }
+
+  .page__hero h1{
+    font-size: clamp(30px, 6vw, 45px);
+  }
+
+  .full__width{
+    padding: clamp(20px, 6vw, 40px) 0;
+  }
+  
+  .full-width p{
+    font-size: 18px;
+  }
+
+  .two__cols{
+    padding: clamp(20px, 6vw, 40px) 0;
+  }
+
+  .two__cols__grid{
+    display:flex;
+    gap: 20px;
+  }
+  .two__cols__grid > div{
+    flex-basis: 50%;
+  }
+  .two__cols__grid img{
+    width:100%;
+    height: 450px;
+    object-fit:cover;
+  }
+
+  .two__cols__grid h3{
+    color: #e3163c;
+    font-size: clamp(18px, 6vw, 40px);
+    text-align:center;
+    margin-bottom: 20px;
+  }
+
+  .two__cols__grid p{
+    font-size: 18px;
+  }
+
+  .two__cols.row__reverse .two__cols__grid{
+    flex-direction: row-reverse;
   }
